validate login, forgotPassword

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -22,6 +22,16 @@
                                         <input type="email" [formControlName]="'email'" class="form-control form-control-user"
                                             id="exampleInputEmail" aria-describedby="emailHelp"
                                             placeholder="Enter Email Address...">
+                                            <div class="valid-false">
+                                                <span *ngIf="messNumber == 1">
+                                                    &nbsp;&nbsp;&nbsp;Không được để trống email
+                                                </span>
+                                                <span *ngIf="messNumber == 2">
+                                                    &nbsp;&nbsp;&nbsp;Email không đúng định dạng
+                                                </span>
+                                            </div>
+                                            <div *ngIf="messNumber == 3">
+                                            </div>
                                     </div>
                                     <button class="btn btn-primary btn-user btn-block">
                                         Reset Password
