--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+/* Validation Form */
 .valid-false {
     color: rgb(235, 23, 23);
 }
 
 .valid-true {
   color: rgb(0, 224, 49);
+}
+
+/* Loading */
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
