--- a/src/app/admin/staff-manager/create-staff/create-staff.component.html
+++ b/src/app/admin/staff-manager/create-staff/create-staff.component.html
@@ -13,15 +13,23 @@
                             <div class="form-group">
                                 <label> Họ và tên </label>
                                 <input type="text" [formControlName]="'name'" class="form-control form-control-user" id="name" placeholder="" required>
+                                <div class="valid-false">
+                                    <span *ngIf="messNumber == 1">
+                                        Họ tên không được bỏ trống
+                                    </span>
+                                    <span *ngIf="messNumber == 2">
+                                        Hãy nhập không dưới 6 ký tự
+                                    </span>
+                                </div>
                             </div>
                             <div class="form-group">
                                 <label> Email </label>
                                 <input type="email" [formControlName]="'email'" class="form-control form-control-user" id="email" placeholder="">
-                                <div *ngIf="StaffForm.get('email').touched">
-                                    <span *ngIf="StaffForm.get('email').errors?.required" class="help-block">
+                                <div class="valid-false">
+                                    <span *ngIf="messNumber == 3">
                                         Email không được bỏ trống
                                     </span>
-                                    <span *ngIf="StaffForm.get('email').errors?.email" class="help-block">
+                                    <span *ngIf="messNumber == 4">
                                         Hãy nhập email hợp lệ
                                     </span>
                                 </div>
