--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -22,11 +22,11 @@
                                         <input type="email" [formControlName]="'email'" class="form-control form-control-user"
                                             id="exampleInputEmail" aria-describedby="emailHelp"
                                             placeholder="Nhập địa chỉ Email...">
-                                        <div *ngIf="loginForm.get('email').touched && loginForm.get('email').invalid" class="valid-false">
-                                            <span *ngIf="loginForm.get('email').errors?.required">
+                                        <div class="valid-false">
+                                            <span *ngIf="messNumber == 1">
                                                 &nbsp;&nbsp;&nbsp;Email không được bỏ trống
                                             </span>
-                                            <span *ngIf="loginForm.get('email').errors?.email">
+                                            <span *ngIf="messNumber == 2">
                                                 &nbsp;&nbsp;&nbsp;Hãy nhập email hợp lệ
                                             </span>
                                         </div>
@@ -34,11 +34,11 @@
                                     <div class="form-group">
                                         <input type="password" [formControlName]="'password'" class="form-control form-control-user"
                                             id="exampleInputPassword" placeholder="Mật khẩu">
-                                        <div *ngIf="loginForm.get('password').touched && loginForm.get('password').invalid" class="valid-false">
-                                            <span *ngIf="loginForm.get('password').errors?.required">
+                                        <div class="valid-false">
+                                            <span *ngIf="messNumber == 3">
                                                 &nbsp;&nbsp;&nbsp;Mật khẩu không được bỏ trống
                                             </span>
-                                            <span *ngIf="loginForm.get('password').errors?.minlength">
+                                            <span *ngIf="messNumber == 4">
                                                 &nbsp;&nbsp;&nbsp;Hãy nhập không dưới 6 ký tự
                                             </span>
                                         </div>
