--- a/src/app/admin/article-manager/view-article/view-article.component.html
+++ b/src/app/admin/article-manager/view-article/view-article.component.html
@@ -1,1 +1,173 @@
-<p>view-article works!</p>
+<div id="webpage">
+    <div class="container-fluid">
+        <div class="row" style="margin-left: -250px;">
+            <main role="main" class="ml-sm-auto col-lg-10" style="margin-top: -70px;">
+                <div
+                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+                    <h1 class="h2">Quản lý tin đăng</h1>
+
+                    <div class="btn-toolbar mb-2 mb-md-0">
+                        <div id="hic">
+                            <div id="demo-2">
+                                <input type="search" placeholder="Tìm kiếm" style="border: 1px solid #e6e6e6;">
+                            </div>
+                        </div>
+                        
+                        <div class="dropdown mr-1">
+                            <button class="btn btn-outline-secondary dropdown-toggle btn-sm" type="button"
+                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                Lọc theo ngày
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item"
+                                    href="https://phongtro123.com/quan-ly/tin-dang.html?status=all&amp;package=vip50">
+                                    Ngày tăng dần</a>
+                                <a class="dropdown-item"
+                                    href="https://phongtro123.com/quan-ly/tin-dang.html?status=all&amp;package=vip30">
+                                    Ngày giảm dần</a>
+                            </div>
+                        </div>
+                        <div class="dropdown mr-1">
+                            <button class="btn btn-outline-secondary dropdown-toggle btn-sm" type="button"
+                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                Lọc theo trạng thái
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item"
+                                    href="https://phongtro123.com/quan-ly/tin-dang.html?status=publish&amp;package=all">Tin
+                                    chưa duyệt</a>
+                                <a class="dropdown-item"
+                                    href="https://phongtro123.com/quan-ly/tin-dang.html?status=expired&amp;package=all">Tin
+                                    đã duyệt</a>
+                            </div>
+                        </div>
+                        <a class="btn btn-danger btn-sm d-none d-md-block"
+                            href="https://phongtro123.com/quan-ly/dang-tin-moi.html">Đăng tin mới</a>
+                        <div class="d-lg-none" style="width: 100%;"><a class="btn btn-danger btn-block mt-3"
+                                href="https://phongtro123.com/quan-ly/dang-tin-moi.html">Đăng tin mới</a></div>
+                    </div>
+
+
+                </div>
+
+                <div class="d-none d-md-block">
+                    <div class="table-responsive">
+                        <table class="table table_post_listing table-bordered _table-hover">
+                            <thead>
+                                <tr>
+                                    <th>Mã tin</th>
+                                    <th style="text-align: center; white-space: nowrap;">Ảnh đại diện</th>
+                                    <th>Tiêu đề</th>
+                                    <th>Giá</th>
+                                    <th style="white-space: nowrap;">Ngày bắt đầu</th>
+                                    <th style="white-space: nowrap;">Ngày hết hạn</th>
+                                    <th style="white-space: nowrap;">Trạng thái</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>#312303</td>
+                                    <td>
+                                        <div class="post_thumb">
+                                            <a href="https://phongtro123.com/quan-ly/tin-dang.html#"
+                                                target="_blank"><img
+                                                    src="./aaa_files/121103604-623408741666058-7968531141853584447-n_1602151851.jpg"></a>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <!-- có 2 loại phòng (Phòng trọ - ở ghép) hiển thị 1 trong 2 dòng dưới tùy vào loại phòng -->
+                                        <span class="badge badge-pill badge-warning">Phòng trọ</span>
+                                        <span class="badge badge-pill badge-warning">Ở ghép</span>
+
+                                        <a class="post_title" target="_blank"
+                                            href="https://phongtro123.com/quan-ly/tin-dang.html#"
+                                            style="color: #055699;">Nhà Trọ Phương Canh Giá Rẻ: 1tr2 25m2
+                                        </a>
+
+                                        <div class="post_btn_toolbar mt-3">
+                                            <a href="https://phongtro123.com/quan-ly/tin-dang/dang-lai-tin/312303"
+                                                class="btn btn-sm btn_danglai"><svg
+                                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="feather feather-refresh-ccw">
+                                                    <polyline points="1 4 1 10 7 10"></polyline>
+                                                    <polyline points="23 20 23 14 17 14"></polyline>
+                                                    <path
+                                                        d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15">
+                                                    </path>
+                                                </svg> Đăng lại tin</a>
+                                        </div>
+                                        <span style="display: block; color: #999; margin-top: 10px;">
+                                            Cập nhật gần nhất: 17:08 08/10/2020
+                                        </span>
+                                    </td>
+                                    <td>
+                                        <div class="post_price">1.2 triệu/tháng</div>
+                                    </td>
+                                    <td>08/10/2020 17:08:10</td> 
+                                    <td>13/10/2020 17:08:10</td>
+                                    <td>
+                                        <span class="text text-warning" style="white-space: nowrap;">Tin chưa duyệt</span>
+                                    </td>
+                                </tr>
+                                <!--  -->
+                                <tr>
+                                    <td>#312303</td>
+                                    <td>
+                                        <div class="post_thumb">
+                                            <a href="https://phongtro123.com/quan-ly/tin-dang.html#"
+                                                target="_blank"><img
+                                                    src="./aaa_files/121103604-623408741666058-7968531141853584447-n_1602151851.jpg"></a>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <!-- có 2 loại phòng (Phòng trọ - ở ghép) hiển thị 1 trong 2 dòng dưới tùy vào loại phòng -->
+                                        <span class="badge badge-pill badge-warning">Phòng trọ</span>
+                                        <span class="badge badge-pill badge-warning">Ở ghép</span>
+
+                                        <a class="post_title" target="_blank"
+                                            href="https://phongtro123.com/quan-ly/tin-dang.html#"
+                                            style="color: #055699;">Nhà Trọ Phương Canh Giá Rẻ: 1tr2 25m2</a>
+
+                                        <div class="post_btn_toolbar mt-3">
+
+
+                                            <a href="https://phongtro123.com/quan-ly/tin-dang/dang-lai-tin/312303"
+                                                class="btn btn-sm btn_danglai"><svg
+                                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="feather feather-refresh-ccw">
+                                                    <polyline points="1 4 1 10 7 10"></polyline>
+                                                    <polyline points="23 20 23 14 17 14"></polyline>
+                                                    <path
+                                                        d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15">
+                                                    </path>
+                                                </svg> Đăng lại tin</a>
+
+
+
+                                        </div>
+                                        <span style="display: block; color: #999; margin-top: 10px;">Cập nhật gần
+                                            nhất: 17:08 08/10/2020</span>
+                                    </td>
+                                    <td>
+                                        <div class="post_price">1.2 triệu/tháng</div>
+                                    </td>
+                                    <td>08/10/2020 17:08:10</td>
+                                    <td>13/10/2020 17:08:10</td>
+                                    <td>
+                                        <span class="text text-warning" style="white-space: nowrap;">Tin Đã duyệt</span>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </main>
+        </div>
+    </div>
+</div><!-- end webpage -->
