--- a/src/app/admin/staff-manager/view-staff/view-staff.component.html
+++ b/src/app/admin/staff-manager/view-staff/view-staff.component.html
@@ -10,7 +10,11 @@
     <div class="card shadow mb-4">
         <form>
         <div class="card-header py-3">
-            <h6 class="font-weight-bold text-primary">Danh sách nhân viên</h6>
+            
+            <!-- thêm ô checkbox để chọn tất cả nhân viên -->
+            <h6 class="font-weight-bold text-primary" id="danhsach"> <input type="checkbox" id="chonTatCa">  Danh sách nhân viên</h6>
+
+          
 
             <!-- BUTTON THÊM NHÂN VIÊN -->
             <div class="addNhanVien">
@@ -31,7 +35,7 @@
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                     <thead>
                         <tr>
-                            <th>STT</th>
+                            <th>Mã nhân viên</th>
                             <th>Họ tên</th>
                             <th>Email</th>
                             <th>SĐT</th>
@@ -45,7 +49,10 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let staff of staffs">
-                            <td>{{staff.staffId}}</td>
+                            <td>{{staff.staffId}}
+                                <br>  <!-- thêm ô checkbox để chọn từng nhân viên  -->
+                                <input type="checkbox" style="border-radius: 10px;">
+                            </td>
                             <td>{{staff.name}}</td>
                             <td>{{staff.email}}</td>
                             <td>{{staff.phone}}</td>
