view-customer and detail-customer

--- a/src/app/admin/customer-manager/detail-customer/detail-customer.component.html
+++ b/src/app/admin/customer-manager/detail-customer/detail-customer.component.html
@@ -1,1 +1,115 @@
-<p>detail-customer works!</p>
+<!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"> -->
+<div class="container">
+    <div class="view-account">
+        <section class="module">
+            <div class="module-inner">
+                <div class="side-bar">
+                    <div class="user-info">
+                      <!-- ẢNH người dùng -->
+                        <img id="anh" class="img-profile img-circle img-responsive " src="https://media.travelmag.vn/files/thuannguyen/2020/04/25/cach-chup-anh-dep-tai-da-lat-1-2306.jpeg" alt="">
+                        <ul class="meta list list-unstyled">
+                            <!-- TÊN người dùng -->
+                            <li class="name">{{customer?.name}}
+                                <!-- CHỨC VỤ -->
+                                <!-- <label class="label label-info" *ngIf="customer?.">Admin</label> -->
+                            </li>
+                            <!-- <li class="email"><a href="#">hiepnguyen31899@gmail.com</a></li> -->
+                        </ul>
+                    </div>
+                </div>
+                <div class="content-panel">
+                    <h1 class="title">CHI TIẾT NGƯỜI DÙNG</h1>
+
+                    <div class="form-group">
+                      <div class="col-md-10 col-sm-9 col-xs-12 col-md-push-2 col-sm-push-3 col-xs-push-0">
+                          <input class="btn btn-primary" type="submit" value="activation người dùng">
+                      </div>
+                  </div>
+                    <form class="form-horizontal">
+                        <fieldset class="fieldset">
+                            <h3 class="fieldset-title">Thông tin cá nhân </h3>
+                            <!-- MÃ người dùng -->
+                            <div class="form-group">
+                              <label class="col-md-2 col-sm-3 col-xs-12 control-label">Mã người dùng: </label> 
+                              <div class="col-md-10 col-sm-9 col-xs-12">
+                                  <input type="text" class="form-control" value="{{customer?.customerId}}" disabled>
+                              </div>
+                          </div>
+                            <!-- TÊN -->
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Họ tên: </label> 
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value="{{customer?.name}}" disabled>
+                                </div>
+                            </div>
+                            <!-- Số dư tài khoản -->
+                            <div class="form-group">
+                              <label class="col-md-2 col-sm-3 col-xs-12 control-label">Số dư tài khoản: </label> 
+                              <div class="col-md-10 col-sm-9 col-xs-12">
+                                  <input type="text" class="form-control" value="{{customer?.accountBalance}}" disabled>
+                              </div>
+                            </div>
+                             <!-- Chứng minh nd - căn cước -->
+                            <div class="form-group">
+                                <label class="col-md-4 col-sm-3 col-xs-12 control-label">Chứng minh nd - căn cước: </label> 
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                  <input type="text" class="form-control" value="{{customer?.cardId}}" disabled>
+                                </div>
+                            </div>
+
+                            <!-- GIỚI TÍNH -->
+                            <div class="form-group">
+                              <label class="col-md-2 col-sm-3 col-xs-12 control-label">Giới tính: </label> 
+                              <div class="col-md-10 col-sm-9 col-xs-12" *ngIf="customer?.gender == true">
+                                  <input type="text" class="form-control" value="Nam" disabled>
+                              </div>
+                              <div class="col-md-10 col-sm-9 col-xs-12" *ngIf="customer?.gender == false">
+                                <input type="text" class="form-control" value="Nữ" disabled>
+                            </div>
+                            </div>  
+                            
+                            <!-- Ngày sinh -->
+                            <div class="form-group">
+                              <label class="col-md-2 col-sm-3 col-xs-12 control-label">Ngày sinh: </label> 
+                              <div class="col-md-10 col-sm-9 col-xs-12">
+                                  <input type="text" class="form-control" value="{{customer?.birthday | date:'dd/MM/yyyy'}}" disabled>
+                              </div>
+                            </div> 
+                        </fieldset>
+                        <fieldset class="fieldset">
+                            <h3 class="fieldset-title">Thông tin liên hệ</h3>
+
+                            <!-- Email -->
+                            <div class="form-group">
+                                <label class="col-md-2  col-sm-3 col-xs-12 control-label">Email</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="email" class="form-control" value="{{customer?.email}}" disabled>
+                                </div>
+                            </div>
+
+                            <!-- Địa chỉ -->
+                            <div class="form-group">
+                                <label class="col-md-2  col-sm-3 col-xs-12 control-label">Địa chỉ</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="text" class="form-control" value="{{customer?.address}}" disabled>
+                                    <!-- <p class="help-block">Địa chỉ hiện tại</p> -->
+                                </div>
+                            </div>
+
+                            <!-- Số điện thoại -->
+                            <div class="form-group">
+                                <label class="col-md-2  col-sm-3 col-xs-12 control-label">Số điện thoại</label>
+                                <div class="col-md-10 col-sm-9 col-xs-12">
+                                    <input type="url" class="form-control" value="{{customer?.phone}}" disabled>
+                                    <!-- <p class="help-block">eg. https://www.linkedin.com/in/yourname</p> -->
+                                </div>
+                            </div>
+                        </fieldset>
+                        <hr>
+
+                    </form>
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
