--- a/src/app/admin/customer-manager/view-customer/view-customer.component.html
+++ b/src/app/admin/customer-manager/view-customer/view-customer.component.html
@@ -1,1 +1,97 @@
-<p>view-customer works!</p>
+<!-- Begin Page Content -->
+<div class="container-fluid">
+    <!-- Page Heading -->
+    <h1 class="h3 mb-2 text-gray-800">Quản Lý người dùng</h1>
+    <!-- <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below.
+                    For more information about DataTables, please visit the <a target="_blank"
+                        href="https://datatables.net">official DataTables documentation</a>.</p> -->
+
+    <!-- DataTales Example -->
+    <div class="card shadow mb-4">
+        <form>
+        <div class="card-header py-3">
+            
+            <!-- thêm ô checkbox để chọn tất cả người dùng -->
+            <h6 class="font-weight-bold text-primary" id="danhsach"> <input type="checkbox" id="chonTatCa">  Danh sách người dùng</h6>
+
+            <!-- BUTTON THÊM người dùng -->
+            <div class="addNguoidung">
+                <a class="btn btn-primary btn-user" routerLink="create-customer">
+                    Thêm Người dùng
+                </a>
+            </div>
+
+            <!-- ô tìm kiếm -->
+            <div class="search-box">
+                <i class="material-icons">&#xE8B6;</i>
+                <input type="text" class="form-control" placeholder="Tìm kiếm Người dùng&hellip;">
+            </div>
+        </div>
+        
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" style="text-align: center;">
+                    <thead>
+                        <tr>
+                            <th>ID người dùng</th>
+                            <th>Họ tên</th>
+                            <th>Số dư TK</th>
+                            <th>CMND</th>
+                            <th>Email</th>
+                            <th>Địa chỉ</th>
+                            <th>Ngày sinh</th>
+                            <th>SĐT</th>
+                            <th>Giới tính</th>
+                            <th>Ảnh</th>
+                            <th>Chức năng</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                         <tr *ngFor="let customer of customers"> <!--// customers lấy từ class view-customer.components.ts -->
+                            <td>{{customer.customerId}}
+                                <br>  <!-- thêm ô checkbox để chọn từng người dùng  -->
+                                <input type="checkbox" style="border-radius: 10px;">
+                            </td>
+                            <td>{{customer.name}}</td>
+                            <td>{{customer.accountBalance}}</td>
+                            <td>{{customer.cardId}}</td>
+                            <td>{{customer.email}}</td>
+                            <td>{{customer.address}}</td>
+                            <td>{{customer.birthday | date:'dd/MM/yyyy'}}</td>
+                            <td>{{customer.phone}}</td>
+                            <td *ngIf="customer.gender == true">Nam</td>
+                            <td *ngIf="customer.gender == false">Nữ</td>
+                            <img src={{customer.image}} alt="" style="width: 80px; height: 100px; padding-top: 10px;"/>
+                            <td>
+                                <a routerLink="detail-customer/{{customer?.customerId}}"  class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
+                                <a routerLink="create-customer" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
+                                <a routerLink="../customer" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons" >&#xE872;</i></a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                      <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                          <span aria-hidden="true">&laquo;</span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                      </li>
+                      <li class="page-item"><a class="page-link" routerLink="/admin/customer" (click)="onPage(0)">1</a></li>
+                      <li class="page-item"><a class="page-link" routerLink="/admin/customer" (click)="onPage(1)">2</a></li>
+                      <li class="page-item"><a class="page-link" routerLink="/admin/customer" (click)="onPage(2)">3</a></li>
+                      <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                          <span aria-hidden="true">&raquo;</span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </nav>
+            </div>
+        </div>
+    </form>
+    </div>
+</div>
+<!-- /.container-fluid -->
