--- a/src/app/auth/singup/singup.component.html
+++ b/src/app/auth/singup/singup.component.html
@@ -92,7 +92,7 @@
                             </div>
                             <div class="valid-true">
                                 <span *ngIf="messNumber == 12">
-                                    &nbsp;&nbsp;&nbsp;Đăng ký thành công, chờ giây lát...
+                                    &nbsp;&nbsp;&nbsp;Vui Lòng chờ giây lát...
                                 </span>
                             </div>
                             <button type="submit" class="btn btn-primary btn-user btn-block">
