--- a/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.html
+++ b/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.html
@@ -4,7 +4,7 @@
             <main role="main" class="ml-sm-auto col-lg-10" style="margin-top: -70px;">
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Quản lý tin đăng</h1>
+                    <h1 class="h2">Quản lý tin tức</h1>
 
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div id="hic">
@@ -58,35 +58,34 @@
                                     <th>Mã tin</th>
                                     <th style="text-align: center; white-space: nowrap;">Ảnh đại diện</th>
                                     <th>Tiêu đề</th>
-                                    <th>Giá</th>
-                                    <th style="white-space: nowrap;">Ngày bắt đầu</th>
-                                    <th style="white-space: nowrap;">Ngày hết hạn</th>
+                                    <th style="white-space: nowrap;">Nội dung</th>
+                                    <th style="white-space: nowrap;">Tác giả</th>
                                     <th style="white-space: nowrap;">Trạng thái</th>
                                     <th>Chức năng</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>#312303</td>
+                                <tr *ngFor="let new of news">
+                                    <td>#{{new.newId}}</td>
                                     <td>
                                         <div class="post_thumb">
                                             <a href="https://phongtro123.com/quan-ly/tin-dang.html#" target="_blank">
-                                                <img src="https://cdn.shopify.com/s/files/1/2046/0489/files/WHsalesslider1_x800.jpg?v=1588100286"></a>
+                                                <img src="https://www.careergro.com/images/usa-img.jpg"></a>
                                         </div>
                                     </td>
                                     <td>
                                         <!-- có 2 loại phòng (Phòng trọ - ở ghép) hiển thị 1 trong 2 dòng dưới tùy vào loại phòng -->
-                                        <span class="badge badge-pill badge-warning">Phòng trọ</span>
-                                        <span class="badge badge-pill badge-warning">Ở ghép</span>
+                                        <!-- <span class="badge badge-pill badge-warning">Phòng trọ</span>
+                                        <span class="badge badge-pill badge-warning">Ở ghép</span> -->
 
                                         <a class="post_title" target="_blank"
                                             href="https://phongtro123.com/quan-ly/tin-dang.html#"
-                                            style="color: #055699;">Nhà Trọ Phương Canh Giá Rẻ: 1tr2 25m2
+                                            style="color: #055699;">{{new.title}}
                                         </a>
 
                                         <div class="post_btn_toolbar mt-3">
-                                            <a href="https://phongtro123.com/quan-ly/tin-dang/dang-lai-tin/312303"
-                                                class="btn btn-sm btn_danglai"><svg
+                                            <a href="https://phongtro123.com/quan-ly/tin-dang/dang-lai-tin/312303" class="btn btn-sm btn_danglai">
+                                                <svg
                                                     xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                     viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -96,19 +95,17 @@
                                                     <path
                                                         d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15">
                                                     </path>
-                                                </svg> Đăng lại tin</a>
+                                                </svg> Đăng lại tin
+                                            </a>
                                         </div>
                                         <span style="display: block; color: #999; margin-top: 10px;">
                                             Cập nhật gần nhất: 17:08 08/10/2020
                                         </span>
                                     </td>
+                                    <td>{{new.content}}</td> 
+                                    <td>{{new.author}}</td>
                                     <td>
-                                        <div class="post_price">1.2 triệu/tháng</div>
-                                    </td>
-                                    <td>08/10/2020 17:08:10</td> 
-                                    <td>13/10/2020 17:08:10</td>
-                                    <td>
-                                        <span class="text text-warning" style="white-space: nowrap;">Tin chưa duyệt</span>
+                                        <span class="text text-warning" style="white-space: nowrap;">Đăng hiển thị</span>
                                     </td>
                                     <td>
                                         <a routerLink="detail-staff" class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
