changes css contend newspaper

--- a/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.css
+++ b/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.css
@@ -459,4 +459,11 @@
   table.table td a.delete {
     color: #E34724;
   }
+
+  .textnd{
+    max-width: 300px;
+    height: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
  
