--- a/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.html
+++ b/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.html
@@ -102,7 +102,7 @@
                                             Cập nhật gần nhất: 17:08 08/10/2020
                                         </span>
                                     </td>
-                                    <td>{{new.content}}</td> 
+                                    <td  class="textnd">{{new.content}}</td> 
                                     <td>{{new.author}}</td>
                                     <td>
                                         <span class="text text-warning" style="white-space: nowrap;">Đăng hiển thị</span>
