--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -1,1 +1,66 @@
-<p>reset-password works!</p>
+<div class="container">
+
+    <!-- Outer Row -->
+    <div class="row justify-content-center">
+
+        <div class="col-xl-10 col-lg-12 col-md-9">
+
+            <div class="card o-hidden border-0 shadow-lg my-5">
+                <div class="card-body p-0">
+                    <!-- Nested Row within Card Body -->
+                    <div class="row">
+                        <div class="col-lg-6 d-none d-lg-block bg-password-image"></div>
+                        <div class="col-lg-6">
+                            <div class="p-5">
+                                <div class="text-center">
+                                    <h1 class="h4 text-gray-900 mb-2">Đổi mật khẩu!</h1>
+                                    <p class="mb-4">Bạn nên sử dụng mật khẩu mạnh mà mình chưa sử dụng ở đâu khác
+                                    </p>
+                                </div>
+                                <form class="user" >
+
+                                    <!-- Mật khẩu cũ -->
+                                    <div class="form-group">
+                                        <span>Mật khẩu hiện tại</span>
+                                        <input type="email" class="form-control form-control-user"
+                                            id="exampleInputEmail" aria-describedby="emailHelp"
+                                            placeholder="">
+                                    </div>
+
+                                    <!-- Mật khẩu mới -->
+                                    <div class="form-group">
+                                        <span>Mật khẩu mới</span>
+                                        <input type="email" class="form-control form-control-user"
+                                            id="exampleInputEmail" aria-describedby="emailHelp"
+                                            placeholder="">
+                                    </div>
+
+                                    <!-- Nhập lại Mật khẩu mới -->
+                                    <div class="form-group">
+                                        <span>Nhập lại mật khẩu mới</span>
+                                        <input type="email" class="form-control form-control-user"
+                                            id="exampleInputEmail" aria-describedby="emailHelp"
+                                            placeholder="">
+                                    </div>
+                                    <button class="btn btn-primary btn-user btn-block">
+                                        Cập nhập
+                                    </button>
+                                </form>
+                                <hr>
+                                <div class="text-center">
+                                    <a class="small" routerLink="../signup">Tạo tài khoản</a>
+                                </div>
+                                <div class="text-center">
+                                    <a class="small" routerLink="../login">Bạn đã có tài khoản? Đăng Nhập</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
