--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -13,9 +13,9 @@
                         <div class="col-lg-6">
                             <div class="p-5">
                                 <div class="text-center">
-                                    <h1 class="h4 text-gray-900 mb-2">Forgot Your Password?</h1>
-                                    <p class="mb-4">We get it, stuff happens. Just enter your email address below
-                                        and we'll send you a link to reset your password!</p>
+                                    <h1 class="h4 text-gray-900 mb-2">Quên mật khẩu?</h1>
+                                    <p class="mb-4">Chỉ cần nhập địa chỉ email của bạn vào bên dưới và chúng tôi sẽ gửi cho bạn một liên kết để đặt lại mật khẩu của bạn!
+                                    </p>
                                 </div>
                                 <form class="user" [formGroup]="forgotForm" (ngSubmit)="forgot()">
                                     <div class="form-group">
